# fastapi-admin-demo

./: .gitignore  Makefile  README.md  pyproject.toml
